--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "url": "git@github.com:brentvatne/react-native-svg.git"
   },
   "scripts": {
+    "postinstall": "cd Libraries/ && git clone --branch working-rn --depth 1 git@github.com:cancan101/SVGKit.git"
   }
 }
